# leads

./: dev-requirements.txt  docker-compose.yml  pyproject.toml  readme.md  requirements.in  requirements.txt  test-requirements.in
alembic/: env.py
alembic/versions/: 1ac052d05d7b_lead_and_salesperson_tables.py
src/: conf.py  db.py
src/api/: main.py
src/api/routers/: __init__.py  lead.py
src/models/: __init__.py  base.py  lead.py
src/services/: lead.py
